--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,11 +7,7 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.example.githubusersearch.ui.search.SearchFragment"
-        android:label="Search" >
-        <action
-            android:id="@+id/action_firstFragment_to_secondFragment"
-            app:destination="@id/profileFragment" />
-    </fragment>
+        android:label="Search" />
 
     <fragment
         android:id="@+id/profileFragment"
