--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,57 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="16dp"
+        android:id="@+id/imBack"
+        android:elevation="6dp"
+        android:padding="4dp"
+        android:background="@drawable/round_shape"
+        android:src="@drawable/baseline_arrow_back_24" />
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/avatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginTop="25dp"
             android:layout_gravity="center"/>
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/username"
-            android:textSize="20sp"
+            android:textSize="22sp"
+            android:maxLines="1"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/bio"
             android:textSize="16sp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="4sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/followers"
             android:layout_marginTop="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/repoCount"
             android:layout_marginTop="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/repositoriesText"
             android:layout_marginTop="14dp"
-            android:text="Repositories"
+            android:text="@string/repositories"
             android:textStyle="bold"
             android:visibility="gone"
-            android:textSize="24dp"
+            android:textSize="24sp"
             android:textColor="@color/cardview_dark_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -65,3 +80,4 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
+</RelativeLayout>
