--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -43,7 +43,7 @@
             android:id="@+id/loader"/>
         <androidx.appcompat.widget.AppCompatTextView
             android:text="@string/search"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
         android:textColor="@android:color/holo_red_dark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:gravity="center"
         android:layout_marginTop="18dp" />
 
