--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.GithubUserSearch" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.GithubUserSearch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/black</item>
         <item name="backgroundColor">@color/black</item>
         <item name="colorSurface">@color/black</item>
